Added logo to page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <img src="img/under-construction.svg" alt="under-construction">
+        <img src="img/under-construction.svg" alt="Under Construction">
+        <br>
+        <img src="img/logo.svg" alt="Logo Vandamme">
         <h1>UNDER CONSTRUCTION</h1>
         <section class="contacts">
             <h3>Bob Vandamme</h3>
